; ModuleID = '/home/carl/AnghaBench/freebsd/sys/opencrypto/extr_xform_aes_icm.c_aes_icm_reinit.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/opencrypto/extr_xform_aes_icm.c_aes_icm_reinit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.aes_icm_ctx = type { i32 }

@AESICM_BLOCKSIZE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i64, i32*)* @aes_icm_reinit to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @aes_icm_reinit(i64 %0, i32* %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i32*, align 8
  %5 = alloca %struct.aes_icm_ctx*, align 8
  store i64 %0, i64* %3, align 8
  store i32* %1, i32** %4, align 8
  %6 = load i64, i64* %3, align 8
  %7 = inttoptr i64 %6 to %struct.aes_icm_ctx*
  store %struct.aes_icm_ctx* %7, %struct.aes_icm_ctx** %5, align 8
  %8 = load i32*, i32** %4, align 8
  %9 = load %struct.aes_icm_ctx*, %struct.aes_icm_ctx** %5, align 8
  %10 = getelementptr inbounds %struct.aes_icm_ctx, %struct.aes_icm_ctx* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = load i32, i32* @AESICM_BLOCKSIZE, align 4
  %13 = call i32 @bcopy(i32* %8, i32 %11, i32 %12)
  ret void
}

declare dso_local i32 @bcopy(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
